AJOUTER à LA LOGIQUE INITIALE DU PROJET

--- a/ESCIC_Market/Acheteur.html
+++ b/ESCIC_Market/Acheteur.html
@@ -10,7 +10,7 @@
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            scroll-behavior: smooth;
+            scroll-behavior: smooth;GIJF
         }
         .product-card:hover {
             transform: translateY(-5px);
