--- a/frontend/Acheteur/profile.html
+++ b/frontend/Acheteur/profile.html
@@ -207,9 +207,9 @@
                                 <i class="fas fa-camera mr-2"></i>Change Photo
                             </button>
                         </div>
-                        <h4 class="text-xl font-semibold text-gray-800" id="userFullName">John Doe</h4>
-                        <p class="text-gray-600" id="userEmail">john.doe@email.com</p>
-                        <p class="text-gray-600" id="userPhone">+1234567890</p>
+                        <h4 class="text-xl font-semibold text-gray-800" id="userFullName">Jean De La Croix MIKEMY NTSIBA</h4>
+                        <p class="text-gray-600" id="userEmail">jmikemy11@gmail.com</p>
+                        <p class="text-gray-600" id="userPhone">+242065680800</p>
                     </div>
                 </div>
             </div>
