--- a/Message.html
+++ b/Message.html
@@ -293,7 +293,7 @@
                                 </div>
                                 <div class="ml-3 flex-1">
                                     <div class="flex justify-between items-center">
-                                        <h3 class="text-sm font-semibold text-gray-900">Jean mickemy</h3>
+                                        <h3 class="text-sm font-semibold text-gray-900">Jean mikemy</h3>
                                         <span class="text-xs text-gray-500">10:42</span>
                                     </div>
                                     <p class="text-xs text-gray-500 truncate">Bonjour, je suis intéressée par votre calculatrice. Est-elle toujours disponible ?</p>
