dashboard vendeur terminé

--- a/frontend/profil.html
+++ b/frontend/profil.html
@@ -50,7 +50,7 @@
         <i class="fas fa-plus mr-3"></i>
         <span>Ajouter un nouvel article</span>
       </a>
-      <a href="#" class="menu-item flex items-center p-3 rounded-lg">
+      <a href="recherche.html" class="menu-item flex items-center p-3 rounded-lg">
         <svg class="mr-3 w-5 h-5 text-blue-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" aria-hidden="true"><circle cx="11" cy="11" r="8" stroke="currentColor" stroke-width="2" fill="none"></circle><line x1="21" y1="21" x2="16.65" y2="16.65" stroke="currentColor" stroke-width="2" stroke-linecap="round"></line></svg>
         <span>Recherche</span>
     </a>
